--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <h3><a href="./public/birthday-invite.html">birthday-invite</a></h3>
     <img src="./assets/images/birthday-invite.png" height="200"  alt="birthday invite project pereview">
-    <h3><a href="./public/movie-ranking.html"></a></h3>
+    <h3><a href="./public/movie-ranking.html">movie ranking</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200"  alt="movie-ranking project preview">
     <hr>
     <a href="./public/contact.html">contact</a>
